--- a/GraphicalEngine/imgui.ini
+++ b/GraphicalEngine/imgui.ini
@@ -48,3 +48,18 @@ Pos=611,344
 Size=325,107
 Collapsed=0
 
+[Window][Texture Graph]
+Pos=60,60
+Size=96,100
+Collapsed=0
+
+[Window][Axis Graph]
+Pos=386,170
+Size=96,100
+Collapsed=0
+
+[Window][3D Graph]
+Pos=658,259
+Size=372,249
+Collapsed=0
+
